@@ -1,5 +1,3 @@
-require 'rubygems'
-
 ##
 # Base exception class for RubyGems.  All exception raised by RubyGems are a
 # subclass of this one.
